tests/snapshots/test_input_errors_read__custom_sql_injection_prevention-8.snap
---
source: tests/test_input_errors_read.rs
expression: result.unwrap_err()
---
Illegal characters in the clause:  ORDER BY $
