tests/snapshots/test_input_errors_read__wrong_parenthood-2.snap
---
source: tests/test_input_errors_read.rs
expression: result.unwrap_err()
---
Table 'album' is not a child of 'song'. 
Available parent tables are []
