tests/snapshots/test_input_errors_read__wrong_parenthood.snap
---
source: tests/test_input_errors_read.rs
expression: result.unwrap_err()
---
Table 'song' is not a child of 'album'. 
Available parent tables are ["artist"]
